--- a/src/gridlayout.styl
+++ b/src/gridlayout.styl
@@ -44,6 +44,8 @@ media-query($size) {
 
 .gl-cell {
   position: relative;
+  
+  vertical-align: top;
 }
 
 /* cell sizes mixin.
